--- a/CBS_dev/style/styles.less
+++ b/CBS_dev/style/styles.less
@@ -20,6 +20,9 @@ ul,li{
 }
 html {
   line-height: 1;
+  margin:0 auto;
+  width:100%;
+  overflow-x:hidden;
 }
 
 @border:1px solid #d7d7d7;
@@ -45,6 +48,7 @@ a:hover{
 
 body{
   with:100%;
+  font-size: 62.5%;
   font:14px/22px "Microsoft YaHei","\5FAE\8F6F\96C5\9ED1",Arial,Helvetica,sans-serif;
   color:@color;
   .header{
@@ -65,7 +69,7 @@ body{
 	    		}
 	    		padding-top:7px;
 	    		img{
-	    			
+	    			max-width: 76%;
 	    		}
 	    }
 	    .theme{
@@ -97,14 +101,42 @@ body{
 	    			position: relative;
 			    	top: 1px;
    				right: 2px;
-   				color:@active;
 	    		}
+                 .active.icon-xiangqu{
+                    color:@active;
+                 }
 	    }
-	    .menue.active{
-	    		i{
-	    			color:@active;
-	    		}
-	    }
+	    
+          .logo-lis{
+              display:none;
+              width: 30%;
+              /*height: 90px;*/
+              font-size: .24rem;
+              border: 1px solid #ebebeb;
+              border-radius: 4px;
+              background: white;
+              position: absolute;
+              top: 58px;
+              right: 3%;
+              z-index: 2;
+              div{
+                    height: 42px;
+                    border-bottom: 1px solid #ebebeb;
+                    line-height: 46px;
+                    text-align:center;
+                  a{
+                    color:#333;
+                  }
+                  img{
+                    display: inline-block;
+                    width: 25px;
+                    height: 25px;
+                    vertical-align: text-bottom;
+                    margin-right:8px;
+                  }
+              }
+          }
+
   }
   .navs{
 	  	height:48px;
@@ -169,11 +201,11 @@ body{
   	z-index:1;
   	margin-top:-1px;
   	width:100%;
-  	.time{}
   	.area{
   		overflow:hidden;
   		position:relative;
   		padding:20px 0;
+            height:100%;
   		background:@filterBg;
   		i{
   			position:absolute;
@@ -206,6 +238,54 @@ body{
   				float:left;
   			}
   		}
+
+            .list{
+                  width:100%;
+                  height:92px;
+                  overflow:hidden;
+                  position:relative;
+                  
+              }
+              .list ul{
+                  display:flex;
+                  height:100%;
+                  margin-left:0px;
+                  padding-left: 0;
+
+              }
+              .list ul li{
+                  /*width:7.2rem !important;*/
+                  display: inline-block;
+                  
+                  height:68px;
+                  line-height:68px;
+              }
+              .list ul li a{
+                  color:#606060;
+                  line-height:1.39rem;
+                  margin-right:.58rem;
+              }
+              .list ul li .falls{
+                  margin-right:0;
+              }
+              .list .dot{
+                  width:100%;
+                  height:.24rem;
+                  position:absolute;
+                  bottom:.66rem;
+                  display:flex;
+                  justify-content:center;
+                  align-items: center;
+              }
+              .list .dot span{
+                  width:10px;
+                  height:1.5px;
+                  border-radius:2px;
+                  background:@active;
+                  margin:0 .18rem;
+              }
+
+
   		.nolimit{
   			width:100%;
   			background:#fff;
@@ -213,6 +293,8 @@ body{
   			border-top:@border;
   			padding:10px 0;
   			color:@active;
+                  position: absolute;
+                  bottom: 0px;
   		}
   	}
   	.more{
@@ -259,7 +341,7 @@ body{
   					width:24px;
   					height:24px;
   					border-radius:24px;
-  					border:1px solid transparent;
+  					border:@border;
   					text-align:center;
   					margin-right:20px;
   				}
@@ -277,11 +359,11 @@ body{
   					i{
   						display:inline-block;
   						width:100%;
+                                  height:40px;
   					}
   					.icon-haofangtuoiconfont_zhinengmensuo{
   						font-size:90px;
   						display:block;
-  						margin-bottom: 15px;
   						margin-left: -11px;
   					}
   					.icon-chuangweichuzu{
@@ -290,6 +372,11 @@ body{
   					.icon-webiconzhengtao{
   						font-size:50px;
   					}
+                              span{
+                                display:inline-block;
+                                width:100%;
+                                padding:2px;
+                              }
   				}
   				.active{
   					color:@active;
@@ -311,9 +398,12 @@ body{
   					font-size:50px;
   					display: inline-block;
    					width: 100%;
+                            height:40px;
   				}
   				span{
   					font-size:12px;
+                            dispaly:inline-block;
+                            width:100%;
   				}
   			}
   		}
@@ -336,6 +426,10 @@ body{
   .list{
   		width:100%;
 	  	margin:0;
+            position:relative;
+            li{
+              position:relative;
+            }
   		.card{
   			position:relative;
   			img{
@@ -413,4 +507,16 @@ body{
   			}
   		}
   }
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default{
+  background:url(../img/bbtn.png) no-repeat !important;
+  background-size: cover !important;
+  width: 18px !important;
+    height: 25px !important;
+    margin-top: -3px !important;
+    outline:none !important;
+}
+.ui-widget.ui-widget-content{
+  height:12px !important;
 }
