--- a/PCHtml/resource/css/css.css
+++ b/PCHtml/resource/css/css.css
@@ -30,9 +30,9 @@ i{ font-style: normal; }
 .appxz:hover .APPxiazai{ display: block; z-index: 999;}
 .guanzhu:hover .weixin{ display: block; z-index: 999;}
 /*nav*/
-.navIndex{ width:100%; background: #fff;}
-.logoAuto{ width: 1200px; margin: auto; padding: 18px 0px;}
-.logoIndex{display: inline-block; float: left;}
+.navIndex{ width:100%; background: #fff; padding: 18px 0px; overflow: hidden;}
+.logoAuto{ width: 1200px; margin: auto;}
+.logoIndex{float: left;}
 .navHome{ display: inline-block; width: 600px; margin: 0px 59px;}
 .navHome a{ width: 150px; text-align: center; float: left; font-size: 18px; color: #333; line-height: 57px;}
 .navHome a:hover{ color: #ef591c; }
@@ -48,6 +48,10 @@ i{ font-style: normal; }
 .navRight .touxiang{ cursor: pointer; }
 .navRight .touxiang:hover .touxiangxiala{ display: block; z-index: 999;}
 .showHome{ color: #ef591c !important; }
+/*登录注册*/
+.longinreg{ float:right; margin-top: 18px;}
+.longinreg a{ margin-left: 10px; border:#ef591c 1px solid; border-radius:5px; color:#ef591c; padding:2px 8px 4px 8px; font-size: 16px;}
+.longinreg a:hover{ background: #ef591c; color: #fff; }
 /*众筹项目总数*/
 .xmIndex{ width:100%; overflow: hidden; background:#f5f5f5;}
 .xmAuto{ width: 1200px; margin:18px auto 25px;}
@@ -196,7 +200,7 @@ i{ font-style: normal; }
 .investmentnr{ background:#fff; border: #e5e5e5 1px solid; display: inline-block;}
 .xuanze{ padding: 25px 15px 15px 15px; float: left;}
 .xuanze p span a{ margin-right: 15px; padding:3px 8px 5px 8px; margin-bottom: 3px; float: left;}
-.xuanze p span{ float: right; width: 1090px;}
+.xuanze p span{ float: right; width: 1080px;}
 .xuanze p{ width: 100%; display: inline-block; line-height: 20px;}
 .xuanze p i{ padding:3px 0px 5px 0px; display: inline-block; }
 .selected{ background: #ef591c; color: #fff; text-align: center;}
@@ -229,7 +233,7 @@ i{ font-style: normal; }
 /*项目详情*/
 .projectDetails{ width: 100%; overflow: hidden; background: #fff; margin-top: 15px; border: #e5e5e5 1px solid;}
 .projectDetailsAll{ width: 1200px; margin:25px auto; }
-.xiangmutitle{ left: 15px; right: 15px; position: absolute; bottom:0px; padding: 10px 15px; background-color:rgba(102,102,102,0.5); color: #fff;}
+.xiangmutitle{ left: 15px; right: 15px; position: absolute; bottom:0px; padding: 10px 15px; background-color:rgba(0,0,0,0.5); color: #fff;}
 .biaoti{ margin:0px 0px 5px 0px; font-family:"微软雅黑";}
 .xiangqingnr{ margin: 0px; font-family:"微软雅黑";}
 .rengou{ width:100%; margin: 10px 0px 40px 0px;}
@@ -301,7 +305,7 @@ i{ font-style: normal; }
 .text{ width: 70%; height: 115px; overflow: hidden;}
 .text p{color:#666;text-indent:0;clear:both;line-height:20px;margin-top:4px;}
 .text p:nth-child(1){ color: #999;}
-.text p:nth-child(2){ height: 60px; overflow: hidden; }
+.text p:nth-child(2){ height: 70px; overflow: hidden; line-height: 25px;}
 .text p i{ margin-left: 30px; }
 .slide .triggers{position:absolute;z-index:1;width:400px;text-align:center;bottom:10px;height:38px;right:0;left:0;padding:0 0 8px;}
 .slide .triggers a{font-size:11px;line-height:12px;color:#000;overflow:hidden;border-radius:1px;-webkit-text-size-adjust:none;float:none;width:62px;height:42px;text-align:center;display:inline-block;background:0;margin:0 3px 0 0;}
@@ -324,11 +328,105 @@ i{ font-style: normal; }
 .shuxian{ font-size: 12px; color: #ccc; float: left; }
 .infoProduct{ width: 100%; background: #fff; border:#e5e5e5 1px solid; }
 .infoNr li{border-bottom: #e5e5e5 1px solid; padding: 15px; width: 880px;}
-.infoNr li:hover{ background: #f5f5f5;}
+.infoNr li:hover{ background: #f8f8f8;}
 .notop{ margin-top: 0px; }
-.listInfo{ text-indent: 10px; border-left: 3px solid #f23133; color: #000; margin: 0px 0px 15px 0px; font-weight: bold; font-family:"微软雅黑"; font-size: 20px;}
-.infoHotProject{ margin: 15px; border-bottom: #e5e5e5 1px dashed;}
-.infoHotProject h3{ margin: 10px 0px 5px 0px; height: 30px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+.listInfo{ text-indent: 10px; border-left: 3px solid #f23133; margin: 0px 0px 15px 0px; font-weight: bold; font-size: 20px;}
+.listInfo a{ color: #000; font-family:"微软雅黑";}
+.listInfo a:hover{color: #ef591c;}
+.infoHotProject{ padding: 10px 0px; margin: 15px; border-bottom: #e5e5e5 1px dashed;}
+.infoHotProject span{ color: #000; font-size: 18px; margin: 10px 0px 0px 0px; display: inline-block; height: 22px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%;}
+.infoHotProject span:hover{color: #ef591c;}
 .infoHotProject p{ height: 45px; overflow: hidden;}
-
+/*资讯详情*/
+.infoDetails{background: #fff; border:#e5e5e5 1px solid; width: 100%; display: inline-block;}
+.detailsNr{ display: inline-block; padding: 15px 25px; text-align: center; width: 100%; font-family:"微软雅黑";}
+.detailsNr p{ font-size: 14px; margin-top: 15px; color: #999; }
+.fenxiang{ border-bottom: #e5e5e5 1px solid; display: inline-block; padding: 9px 15px; width: 100%; background: #f8f8f8;}
+.detailsZixun{ border-top:#e5e5e5 1px solid; text-align: left; font-family:"微软雅黑"; line-height: 28px; padding: 15px 0px; margin-top: 15px;}
+.relatedNews{ background: #fff; border: #e5e5e5 1px solid; margin-top: 15px;}
+.relatedNews h4{font-family:"微软雅黑"; border-bottom: #e5e5e5 1px solid; background: #f8f8f8; margin: 0px;  line-height: 50px; padding: 0px 15px;}
+.related{ padding: 15px; width: 100%; display: inline-block;}
+.related span.left{ float: left; width: 48%; }
+.related span.left a,.related span.right a{ float: left; width: 100%; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; height: 28px; line-height: 28px;}
+.related span.right a:hover{color: #ef591c;}
+.related span.left a:hover{color: #ef591c;}
+.related span.right{ width: 48%; float: right; }
+/*登录注册*/
+.loginRight{ float: right; line-height: 58px; font-size: 18px; font-family:"微软雅黑"; color: #999;}
+.loginRight a{ color: #f05d1a; margin-left: 10px;}
+.loginRight a:hover{ color: #f89d74;}
+.loginBg{ background: url(../images/bgLogin.jpg) center no-repeat; width: 100%; overflow: hidden;}
+.icon-tuoyuan{ font-size: 22px !important; margin-left:5px;}
+.loginall{ margin:40px auto; width: 900px; background: #fff; padding: 40px 0px;}
+.loginCenter{ width: 100%; display: inline-block; }
+.leftLogin{ width: 579px; float: left; border-right:#e5e5e5 1px solid; padding: 30px 0px;}
+/*登录*/
+.hint_wrong{color: #EA5A70;}
+.input_signin{ padding: 0px 58px; }
+.input{ width: 460px; background: #f4f4f4; border:#d9d9d9 1px solid; height: 48px; line-height: 48px; border-radius:3px; font-family:"微软雅黑"; font-size: 16px; text-indent: 10px;}
+.hint { font-size: 12px;text-align: right; padding-right: 10px; margin: 5px 0px 10px 0px; visibility: hidden; }
+#code_input{ width: 260px; background: #f4f4f4; border:#d9d9d9 1px solid; height: 48px; line-height: 48px; border-radius:3px; font-family:"微软雅黑"; font-size: 16px; text-indent: 10px;}
+#v_container{float: right; width: 190px; height: 49px;}
+.forgotPasswordPage{ float: left;  width: 260px; line-height: 48px; margin-top: 35px;}
+.button{ cursor: pointer; margin-top: 35px; font-family:"微软雅黑"; height: 48px; line-height: 48px;  width: 190px; float: right; background: #4d90fe; font-size: 18px; color: #fff; border-radius:3px; border:none; }
+.button:hover{ background: #89b5fa; }
+.rightLogin{ text-align: center; float: right; width: 320px; margin: 60px 0px;}
+.rightLogin img{ width: 200px; }
+.loginFoot{ width: 100%; text-align: center; color: #999; margin: 80px 0px; font-size: 14px; }
+/*注册*/
+.icon-juxing{ font-size: 22px !important; margin-left: 5px;}
+.registered{ width: 100%; border-top: #e5e5e5 1px solid;}
+.hqyzm{ background: none; float: right; width: 200px; height: 49px; line-height: 48px; font-family:"微软雅黑"; border:none; font-size: 16px; outline: initial; cursor: pointer; color: #888;}
+.yanzhenma{background: #fdfdfc; width: 462px; border:#d9d9d9 1px solid; height: 50px; line-height: 48px; border-radius:3px; font-family:"微软雅黑"; font-size: 16px;}
+.yanzhen{background: #f4f4f4; width: 260px; border:none; height: 48px; line-height: 48px;  font-family:"微软雅黑";font-size: 16px; text-indent: 10px;}
+.qsryzm{font-size: 12px;text-align: right; padding-right: 10px; margin: 5px 0px 10px 0px; visibility: hidden; }
+.passwordReg{ font-size: 12px;text-align: right; width: 100%; height: 26px; margin-bottom: 10px;}
+.info,.safe{display:none;color:#666; line-height:26px;}
+.pass_put{height:60px;line-height:26px;}
+.info_error{display:none;color:red;margin-top: -36px; margin-left: 425px; position: absolute;}
+.ok {margin-top: -36px; margin-left: 425px; position: absolute; color: #4d90fe; display: none;}
+.icon-zhengque{font-size: 22px !important;}
+.icon-cuowu{font-size: 22px !important;}
+.checkboxK{ width: 100%;display: inline-block; }
+.checkboxK input{float: left; margin: 5px 10px 0px 0px;}
+.zcfwxy{ color: #4d90fe; font-family:"微软雅黑"; cursor: pointer; }
+.registered{ width: 100%; }
+.PasswordAuto{ width: 460px; margin:60px auto; }
+/*个人中心*/
+.meCenter{ width: 100%; overflow: hidden; border-top: #e5e5e5 1px solid; background: #fafafa;}
+.headPhoto{padding: 45px 0px 25px 0px; text-align: center; width: 100%; display:inline-block; line-height: 48px;}
+.headPhotoImg{border-radius:75px; border:#fff 6px solid; width: 150px; height: 150px; margin: auto;}
+.meCenterLeft{ padding-bottom: 500px; width: 300px; float: left; background: #f4efea; border: #e6d3c1 1px solid;}
+#outer { display: inline-block; width:100%;margin:0px 0px 30px 0px;box-shadow: 1px 1px 4px 4px #f5f5f5; border-bottom: #e5e5e5 1px solid; background: #fff;}
+#tab {overflow:hidden;zoom:1;}
+#tab li {color:#888;cursor:pointer;line-height:65px; width: 100%; text-align: center;}
+#tab li span{ margin: auto;  width: 100px; display: inline-block;}
+#tab li.current {color:#fff; background:url(../images/n-qyjz-52.png) no-repeat;}
+#contentMy {width: 900px; float: right; background: #fff;}
+#contentMy ul{ display: none; }
+.icon-gerenziliao{ font-size: 22px !important; margin-right: 5px; float: left; margin-top: 2px;}
+.icon-xiaoxizhongxin{ font-size: 22px !important; margin-right: 5px; float: left; margin-top: 2px;}
+.icon-touzijilu{ font-size: 22px !important; margin-right: 5px; float: left; margin-top: 2px;}
+.icon-xiangmuguanli{ font-size: 22px !important; margin-right: 5px; float: left; margin-top: 2px;}
+.icon-jiangliquan{ font-size: 22px !important; margin-right: 5px; float: left; margin-top: 2px;}
+.icon-xiaoxizhongxin{ font-size: 22px !important; margin-right: 5px; float: left; margin-top: 2px;}
+/*个人资料*/
+.meziliao{ padding: 15px 30px; width: 100%; }
+.meziliao h3{ border-bottom: #ccc 1px dashed; padding-bottom: 20px; position: relative;}
+.meziliao h3 i{ display: inline-block; border-bottom: #ef591c 3px solid; position: absolute; width: 100px; top:44px;}
+.gender{ padding: 20px 0px; border-bottom: #ccc 1px dashed; }
+.xingbie{ line-height: 50px; color: #999;}
+.leftGender h4{ line-height: 30px; }
+.rightxb{ margin-top: 5px !important; }
+.xingbieAll{ padding: 30px 140px; display: inline-block;}
+.xingbieAll span{ float: left; width: 65px;text-align: center; margin-left: 50px;}
+.icon-nan{ font-size: 60px !important; color: #4d90fe;}
+.icon-nv{ font-size: 60px !important; color: #fc5bab;}
+.xingbieAll p{ margin-top: 15px;}
+.xingbieAll p input{ margin-right: 6px; }
+.certification{ padding: 30px 0px; width: 460px; margin: auto; }
+.smrz{ height: 30px; }
+.industry{ padding: 20px; }
+.followIndustry{ cursor: pointer; text-align: center; width: 100%; display: inline-block; margin-bottom: 20px; padding: 5px 0px; border: #e5e5e5 1px solid; background: linear-gradient( #f7f7f7 , #fff); font-size: 14px; color: #9b9b9b; }
+.followSelected{ background: #4d90fe; color: #fff ; }
 
